--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,7 +13,9 @@
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button id="addQuoteBtn">Add Quote</button>
+    <button id="exportBtn" type="button">Export Quotes (JSON)</button>
   </div>
+  <input type="file" id="importFile" accept=".json" style="display:inline-block;" />
   <script src="script.js"></script>
 </body>
 </html>
